<resources>

    <string name="orders_title">Заказы</string>
    <string name="orders_not_found_title">К сожалению, у вас еще нет ни одного заказа</string>
    <string name="orders_not_found_desc">Закажите товар с главной страницы или с раздела с акциями</string>
    <string name="orders_to_catalog">Каталог</string>
    <string name="orders_to_stocks">Акции</string>
    <string name="orders_filter_all">Все</string>
    <string name="orders_filter_in_work">В работе</string>
    <string name="orders_filter_canceled">Отмененные</string>
    <string name="orders_filter_completed">Завершеные</string>

    <string name="orders_search_hint">Введите номер заказа</string>

    <string name="order_details_method_delivery">Способ получения</string>
    <string name="order_details_address">Адресс доставки</string>
    <string name="order_details_total_products">Всего товаров:</string>
    <string name="order_details_bonus_count">Бонусов начислено:</string>
    <string name="order_details_payment_method">Способ оплаты:</string>
    <string name="order_details_total_cost">Итоговая стоимость:</string>
    <string name="order_details_extend_booking">Продлить бронирование</string>
    <string name="order_details_cancel_btn">Отменить</string>
    <string name="order_details_repeat_btn">Повторить заказ</string>

</resources>