<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="ru.apteka.components.data.utils.ExtensionsMethodsKt" />

        <variable
            name="viewModel"
            type="ru.apteka.orders.presentation.orders.OrdersViewModel" />

    </data>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            android:id="@+id/ordersToolbar"
            layout="@layout/toolbar" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <!-- Уведомление отсутствия заказов -->
            <LinearLayout
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                app:visibleIf="@{!viewModel.isLoading &amp; viewModel.orders.empty}">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/no_orders"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:gravity="center_horizontal"
                    android:text="@string/orders_not_found_title"
                    android:textColor="@color/dark_black"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:gravity="center_horizontal"
                    android:text="@string/orders_not_found_desc"
                    android:textColor="@color/light_black" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/mbOrdersToCatalog"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="4dp"
                        android:layout_weight="1"
                        android:text="@string/orders_to_catalog" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/mbOrdersToStocks"
                        style="@style/Theme.Socapteki.OutlinedButton"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:layout_weight="1"
                        android:text="@string/orders_to_stocks" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:visibleIf="@{!viewModel.isLoading &amp; !viewModel.orders.empty}">

                <!-- Фильтры -->
                <HorizontalScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fillViewport="true"
                    android:overScrollMode="never"
                    android:scrollbars="none">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        android:orientation="horizontal"
                        android:padding="16dp"
                        app:forItems="@{viewModel.orderFilter.items}"
                        app:useTemplate="@{@layout/order_filter_view}"
                        app:visibleIf="@{viewModel.orderFilter.mediator}" />

                </HorizontalScrollView>


                <!-- Список заказов -->
                <androidx.core.widget.NestedScrollView
                    android:id="@+id/nestedScroll"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fillViewport="true">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <com.alab.extra_bouncy.BouncyRecyclerView
                            android:id="@+id/rvOrders"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@color/white"
                            android:orientation="vertical"
                            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

                        <include layout="@layout/footer_stub" />

                    </LinearLayout>

                </androidx.core.widget.NestedScrollView>

            </LinearLayout>

            <include
                layout="@layout/progress_bar"
                app:isLoading="@{viewModel.isLoading}" />

        </FrameLayout>

    </LinearLayout>

</layout>